<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/grey">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Photo"
            android:textAllCaps="true"
            android:textSize="70sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:background="@color/grey"
            android:padding="20dp"
            app:srcCompat="@drawable/camera" />
    </FrameLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:layout_margin="10dp"
        android:hint="@string/Title"
        android:inputType="text"
        android:textColor="@color/grey" />

    <LinearLayout
        android:id="@+id/PriceLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/Price"
            android:inputType="text"
            android:textColor="@color/grey" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Location"
                android:inputType="text"
                android:textColor="@color/grey" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@color/white"
                app:srcCompat="@drawable/location" />
        </FrameLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PriceLocation"
        android:layout_margin="10dp"
        android:hint="@string/Description"
        android:inputType="text"
        android:textColor="@color/grey" />

<!--    <LinearLayout-->
<!--        android:id="@+id/inventory"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/description"-->
<!--        android:padding="10dp">-->

        <EditText
            android:id="@+id/inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Inventory"
            android:inputType="text"
            android:textColor="@color/grey"
            android:layout_below="@+id/description" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/inventory" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/view"
        android:hint="@string/Weight"
        android:inputType="text"
        android:textColor="@color/grey" />
<!--    </LinearLayout>-->

</RelativeLayout>