<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginBottom="25dp">

    <FrameLayout
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/grey"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Photo"
            android:textAllCaps="true"
            android:textSize="70sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:background="@color/grey"
            android:padding="20dp"
            app:srcCompat="@drawable/camera" />
    </FrameLayout>


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Title"
        android:inputType="text"
        android:textColor="@color/grey"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/photo"/>


    <LinearLayout
        android:id="@+id/PriceLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Price"
                android:inputType="text"
                android:textColor="@color/grey" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Location"
                android:inputType="text"
                android:textColor="@color/grey" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@color/white"
                app:srcCompat="@drawable/location" />
        </FrameLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Description"
        android:inputType="text"
        android:textColor="@color/grey"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/PriceLocation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Inventory"
            android:inputType="text"
            android:textColor="@color/grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Weight"
            android:inputType="text"
            android:textColor="@color/grey" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>