<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sing_in"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="70dp"
        android:paddingBottom="25dp"
        android:paddingHorizontal="30dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textSize="35sp"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textSize="35sp"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Remember"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:theme="@style/MyCheckBox"
            android:checked="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Forgot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_for_button"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:text="@string/Sing_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sing_in_2"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_gravity="bottom|center"/>


</LinearLayout>